Feature: implement rate limiting for registration and login attempts